--- a/plugin.xml
+++ b/plugin.xml
@@ -8,7 +8,7 @@
     <js-module src="www/Localytics.js" name="Localytics">
         <clobbers target="Localytics" />
     </js-module>
-    
+
     <engines>
         <engine name="cordova" version=">=3.0.0" />
     </engines>
@@ -20,6 +20,13 @@
                 <param name="ios-package" value="LocalyticsPlugin"/>
             </feature>
         </config-file>
+
+        <config-file target="*-Info.plist" parent="LocalyticsAppKey">
+            <array>
+                <string>f700b1c385b10c2137b6a93-415f62ba-4a3c-11e5-6a70-00736b041834</string>
+            </array>
+        </config-file>
+
         <source-file src="src/ios/libLocalytics.a" framework="true"/>
         <header-file src="src/ios/Localytics.h" />
         <header-file src="src/ios/LocalyticsPlugin.h" />
@@ -30,7 +37,7 @@
         <framework src="SystemConfiguration.framework" />
         <framework src="AdSupport.framework" weak="true" />
         <framework src="CoreLocation.framework" weak="true" />
-        
+
     </platform>
 
     <platform name="android">
