info.plist structure change

--- a/plugin.xml
+++ b/plugin.xml
@@ -22,7 +22,7 @@
         </config-file>
 
         <config-file target="*-Info.plist" parent="LocalyticsAppKey">
-            <string>$APP_ID</string>
+            <string>f700b1c385b10c2137b6a93-415f62ba-4a3c-11e5-6a70-00736b041834</string>
         </config-file>
 
         <config-file target="*-Info.plist" parent="CFBundleURLTypes">
@@ -30,7 +30,7 @@
             <dict>
               <key>CFBundleURLSchemes</key>
               <array>
-                <string>amp$APP_ID</string>
+                <string>ampf700b1c385b10c2137b6a93-415f62ba-4a3c-11e5-6a70-00736b041834</string>
               </array>
             </dict>
           </array>
