--- a/plugin.xml
+++ b/plugin.xml
@@ -14,7 +14,7 @@
     </engines>
 
     <platform name="ios">
-
+        <preference name="APP_ID" />
         <config-file target="config.xml" parent="/*">
             <feature name="LocalyticsPlugin">
                 <param name="ios-package" value="LocalyticsPlugin" onload="true"/>
@@ -22,7 +22,7 @@
         </config-file>
 
         <config-file target="*-Info.plist" parent="LocalyticsAppKey">
-            <string>f700b1c385b10c2137b6a93-415f62ba-4a3c-11e5-6a70-00736b041834</string>
+            <string>APP_ID</string>
         </config-file>
 
         <config-file target="*-Info.plist" parent="CFBundleURLTypes">
@@ -30,7 +30,7 @@
             <dict>
               <key>CFBundleURLSchemes</key>
               <array>
-                <string>ampf700b1c385b10c2137b6a93-415f62ba-4a3c-11e5-6a70-00736b041834</string>
+                <string>ampf$APP_ID</string>
               </array>
             </dict>
           </array>
