--- a/plugin.xml
+++ b/plugin.xml
@@ -14,7 +14,7 @@
     </engines>
 
     <platform name="ios">
-        <preference name="APP_ID" />
+        <preference name="APP_IDs" />
         <config-file target="config.xml" parent="/*">
             <feature name="LocalyticsPlugin">
                 <param name="ios-package" value="LocalyticsPlugin" onload="true"/>
@@ -22,7 +22,7 @@
         </config-file>
 
         <config-file target="*-Info.plist" parent="LocalyticsAppKey">
-            <string>$APP_ID</string>
+            <string>$APP_IDs</string>
         </config-file>
 
         <config-file target="*-Info.plist" parent="CFBundleURLTypes">
@@ -30,7 +30,7 @@
             <dict>
               <key>CFBundleURLSchemes</key>
               <array>
-                <string>ampf$APP_ID</string>
+                <string>ampf$APP_IDs</string>
               </array>
             </dict>
           </array>
