--- a/plugin.xml
+++ b/plugin.xml
@@ -30,7 +30,7 @@
             <dict>
               <key>CFBundleURLSchemes</key>
               <array>
-                <string>ampf$APP_ID</string>
+                <string>amp$APP_ID</string>
               </array>
             </dict>
           </array>
